--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My First Parcel App</title>
+    <title>Pet Store</title>
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./app.js"></script>
+    <script defer src="./app.js"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Pet Store Report</h1>
+    <div class="report"></div>
   </body>
 </html>
