--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,69 @@
   </head>
   <body>
     <h1>Pet Store Report</h1>
+    <form >
+      <input disabled type="text" value="Adam" placeholder="Customer name">
+      <input disabled type="number" value="1">
+      <select disabled name="puppies" id="puppies" value="bitpull">
+        <optgroup label="Puppies">
+          <option value="bitpull">Bitpull</option>
+          <option value="husky">Husky</option>
+        </optgroup>
+        <optgroup label="Fishs">
+          <option value="perch">Perch</option>
+          <option value="mackerel">Mackerel</option>
+        </optgroup>
+      </select>
+      <input disabled type="Submit" value="Sell">
+      <br>
+
+      <input disabled type="text" value="Adam" placeholder="Customer name">
+      <input disabled type="number" value="1">
+      <select disabled name="puppies" value="perch">
+        <!-- <optgroup label="Puppies">
+          <option value="bitpull">Bitpull</option>
+          <option value="husky">Husky</option>
+        </optgroup> -->
+        <optgroup label="Fishs">
+          <option value="perch">Perch</option>
+          <option value="mackerel">Mackerel</option>
+        </optgroup>
+      </select>
+      <input disabled type="Submit" value="Sell">
+      <br>
+
+      <input disabled type="text" value="Jhon" placeholder="Customer name">
+      <input disabled type="number" value="1">
+      <select disabled name="puppies" id="puppies" value="husky">
+        <optgroup label="Puppies">
+          <!-- <option value="bitpull">Bitpull</option> -->
+          <option value="husky">Husky</option>
+        </optgroup>
+        <optgroup label="Fishs">
+          <option value="perch">Perch</option>
+          <option value="mackerel">Mackerel</option>
+        </optgroup>
+      </select>
+      <input disabled type="Submit" value="Sell">
+      <br>
+
+
+      <input disabled type="text" value="Jhon" placeholder="Customer name">
+      <input disabled type="number" value="1">
+      <select disabled name="puppies" id="puppies" value="mackerel">
+        <optgroup label="Puppies">
+          <!-- <option value="bitpull">Bitpull</option>
+          <option value="husky">Husky</option> -->
+        </optgroup>
+        <optgroup label="Fishs">
+          <!-- <option value="perch">Perch</option> -->
+          <option value="mackerel">Mackerel</option>
+        </optgroup>
+      </select>
+      <input disabled type="Submit" value="Sell">
+      <br>
+
+    </form>
     <div class="report"></div>
   </body>
 </html>
